--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME} main.c)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ../lib/)
-
-target_link_libraries(${PROJECT_NAME} PRIVATE game)
-target_link_libraries(${PROJECT_NAME} PRIVATE input)
+target_link_libraries(${PROJECT_NAME} PRIVATE game input)
