--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_executable(${PROJECT_NAME} client.c)
 
+find_package(logger REQUIRED)
+target_link_libraries(${PROJECT_NAME} PRIVATE logger::logger)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE input math network game_state raylib button global)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/lib/)
 
